fixed infobox in /music/play/ being whitespace-wrapped when the other two containers took up too much space

--- a/html/style/play.css
+++ b/html/style/play.css
@@ -42,6 +42,7 @@
 	border-radius:0 0.25em 0.25em 0.25em;
 	overflow:clip;
 	max-width:25%;/*only on horizontal screens*/
+	white-space:nowrap;
 }
 #play_info>:is(span,div){
 	padding:0.25em 0.5em;
